# nucleo-f446re-hello-world

./: Cargo.toml  Embed.toml  README.md
src/: main.rs
